<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context=".Registration.Sign_Up">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150sp"
        android:src="@drawable/regist"
        android:layout_centerHorizontal="true"
        android:id="@+id/log_img"/>

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_img"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/small_sig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textColor="@color/black"
        android:layout_below="@id/welcome_txt"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/name"
        android:layout_below="@id/small_sig"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        android:padding="8dp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/username"
        android:layout_below="@id/name"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:padding="8dp"
        android:drawableLeft="@drawable/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/email"
        android:layout_below="@id/username"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:padding="8dp"
        android:drawableLeft="@drawable/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/password"
        android:layout_below="@id/email"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:padding="8dp"
        android:drawableLeft="@drawable/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:id="@+id/sign_btn2"
        android:layout_width="300sp"
        android:layout_height="40dp"
        android:backgroundTint="@color/layout"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_boarder"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity=""
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/sign_btn2"
        android:id="@+id/loginRedirectText"
        android:layout_marginTop="10sp">

        <TextView
            android:id="@+id/tttt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/sig"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/tttt"/>

        <LinearLayout
            android:layout_width="55dp"
            android:layout_height="2dp"
            android:background="#CA0D0D"
            android:layout_toEndOf="@id/tttt"
            android:layout_below="@id/sig"/>

    </RelativeLayout>




</RelativeLayout>